@@ -1,12 +1,6 @@
 package com.nexia.core.utilities.item;
 
-import com.combatreforged.factory.api.world.nbt.NBTList;
-import com.combatreforged.factory.api.world.nbt.NBTObject;
-import net.kyori.adventure.text.Component;
-import net.kyori.adventure.text.serializer.gson.GsonComponentSerializer;
-import net.minecraft.nbt.CompoundTag;
-import net.minecraft.nbt.ListTag;
-import net.minecraft.nbt.StringTag;
+import net.minecraft.nbt.*;
 import net.minecraft.world.item.ItemStack;
 
 public class ItemDisplayUtil {
@@ -28,30 +22,13 @@ public class ItemDisplayUtil {
         itemStack.setTag(compoundTag);
     }
 
-    public static void addLore(ItemStack itemStack, Component component, int line) {
-        CompoundTag compoundTag = itemStack.getOrCreateTag();
-        CompoundTag display = compoundTag.getCompound("display");
-        ListTag listTag = display.getList("Lore", 8);
-
-        String string = GsonComponentSerializer.gson().serialize(component);
-        if (line < 0) {
-            listTag.add(listTag.size() + line + 1, StringTag.valueOf(string));
-        } else {
-            listTag.add(line, StringTag.valueOf(string));
-        }
-
-        display.put("Lore", listTag);
-        compoundTag.put("display", display);
-        itemStack.setTag(compoundTag);
-    }
-
     public static void removeLore(ItemStack itemStack, int line) {
         CompoundTag compoundTag = itemStack.getOrCreateTag();
         CompoundTag display = compoundTag.getCompound("display");
         ListTag listTag = display.getList("Lore", 8);
 
         if (line < 0) {
-            if (!listTag.isEmpty()) listTag.removeLast();
+            if (!listTag.isEmpty()) listTag.remove(listTag.size() - 1);
         } else {
             if (listTag.size() > line) {
                 listTag.remove(line);
@@ -73,20 +50,6 @@ public class ItemDisplayUtil {
                 ListTag listTag = new ListTag();
                 listTag.add(new CompoundTag());
                 itemStack.getOrCreateTag().put("Enchantments", listTag);
-            }
-        } catch (Exception ignored) {}
-    }
-
-    public static void addGlint(com.combatreforged.factory.api.world.item.ItemStack itemStack) {
-        try {
-            System.out.println(itemStack.getEnchantments());
-            if (itemStack.getEnchantments().isEmpty()) {
-                NBTList list = NBTList.create();
-                NBTObject object = NBTObject.create();
-
-                object.set("Enchantments", list);
-
-                itemStack.setItemNBT(object);
             }
         } catch (Exception ignored) {}
     }
